Test framework enhancements to allow multiple instances with separate configurations. Changed convention for config directories.